Sat Sep 18 19:43:20 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-output-varray.rb -> p-output-varray.rb

Sat Sep 18 19:41:29 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/master/*.rb: REQ251対応完了
	* basic-group-by.rb, file-place.rb: REQ251対応

Sat Sep 18 18:36:33 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/client/*.rb: REQ251対応完了

Sat Sep 18 00:36:03 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* barrier.rb, basic-group-by.rb, cat.rb, direct-product.rb,
	  equijoin.rb, exec.rb,filter.rb, find.rb, group-by.rb, here.rb,
	  inject.rb, input-file.rb, input-iota.rb, input-local-file.rb,
	  input-varray.rb, input.rb: REQ251対応
	* {,c-,p-}iofilter.rb -> {,c-,p-}io-filter.rb

Fri Sep 17 23:17:46 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/main/*: REQ251対応完了

Fri Sep 17 22:12:04 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/fairy.rb, lib/fairy/app/*: REQ251対応完了

Fri Sep 17 22:06:35 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy{-cat,cp,rm}: REQ251対応完了

Fri Sep 17 21:45:07 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/{master,...}をlib/fairy/app以下に移動
	* lib/{master.rb,..}をlib/fairy/main以下に移動

Fri Sep 17 21:33:56 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/port*.rb を share以下へ移動

Fri Sep 17 21:31:05 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/node以下ファイル名改名(その3)

Fri Sep 17 21:27:49 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/node以下ファイル名改名(その2)

Fri Sep 17 21:24:42 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/node以下ファイル名改名(その1)

Fri Sep 17 21:20:02 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/client以下ファイル名改名(その4)

Fri Sep 17 21:16:23 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/master以下ファイル名改名(その4)

Fri Sep 17 21:15:26 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/master以下ファイル名改名(その3)

Fri Sep 17 21:09:49 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/master以下ファイル名改名(その2)
