@@ -1,11 +1,14 @@
 # encoding: UTF-8
+#
+# Copyright (C) 2007-2010 Rakuten, Inc.
+#
 
-require "fairy/node/n-filter"
-require "fairy/node/n-single-exportable"
+require "fairy/node/p-io-filter"
+require "fairy/node/p-single-exportable"
 
 module Fairy
-  module NDirectProduct
-    class NPreFilter<NFilter
+  module PDirectProduct
+    class PPreFilter<PIOFilter
       Processor.def_export self
 
       def initialize(id, ntask, bjob, opts, block_source)
@@ -74,7 +77,7 @@ module Fairy
        end
     end
 
-    class NPostFilter<NSingleExportFilter
+    class PPostFilter<PSingleExportFilter
       Processor.def_export self
 
       def initialize(processor, bjob, opts, block_source)
