@@ -1,10 +1,13 @@
 # encoding: UTF-8
+#
+# Copyright (C) 2007-2010 Rakuten, Inc.
+#
 
-require "fairy/node/n-filter"
-require "fairy/node/n-group-by"
+require "fairy/node/p-io-filter"
+require "fairy/node/p-basic-group-by"
 
 module Fairy
-  class NModGroupBy<NGroupBy
+  class PGroupBy<PBasicGroupBy
 
     Processor.def_export self
 
@@ -32,7 +35,7 @@ module Fairy
       @hash_generator.value(super) % @mod
     end
 
-    class NPostFilter<NSingleExportFilter
+    class PPostFilter<PSingleExportFilter
       Processor.def_export self
 
       def initialize(id, ntask, bjob, opts, block_source)
