@@ -1,9 +1,12 @@
 # encoding: UTF-8
+#
+# Copyright (C) 2007-2010 Rakuten, Inc.
+#
 
-require "fairy/node/n-single-exportable"
+require "fairy/node/p-single-exportable"
 
 module Fairy
-  class NIota<NSingleExportInput
+  class PInputIota<PSingleExportInput
     Processor.def_export self
 
     def initialize(id, ntask, bjob, opts)
