@@ -1,9 +1,12 @@
 # encoding: UTF-8
+#
+# Copyright (C) 2007-2010 Rakuten, Inc.
+#
 
-require "fairy/node/n-single-exportable"
+require "fairy/node/p-single-exportable"
 
 module Fairy
-  class NInputVArray<NSingleExportInput
+  class PInputVArray<PSingleExportInput
     Processor.def_export self
 
 #    def initialize(processor, bjob, opts)
