@@ -1,11 +1,14 @@
 # encoding: UTF-8
+#
+# Copyright (C) 2007-2010 Rakuten, Inc.
+#
 
 require "uri"
 
-require "fairy/node/nhere"
+require "fairy/node/p-here"
 
 module Fairy
-  class NLFileOutput<NHere
+  class POutputLocalFileOutput<PHere
     Processor.def_export self
   end
 end
