@@ -1,10 +1,10 @@
 # encoding: UTF-8
 
-require "fairy/node/njob"
-require "fairy/node/n-single-exportable"
+require "fairy/node/p-io-job"
+require "fairy/node/p-single-exportable"
 
 module Fairy
-  class NEachSubStreamMapper<NSingleExportFilter
+  class PSegMap<PSingleExportFilter
     Processor.def_export self
 
 #    DeepConnect.def_single_method_spec(self, "REF new(REF, REF, VAL, VAL)")
