@@ -1,14 +1,16 @@
 # encoding: UTF-8
+#
+# Copyright (C) 2007-2010 Rakuten, Inc.
+#
 
-require "fairy/node/njob"
-require "fairy/node/port"
-require "fairy/node/n-single-exportable"
+require "fairy/node/p-filter"
+require "fairy/node/p-single-exportable"
 
 module Fairy
-  class NThere<NJob
+  class PThere<PFilter
     Processor.def_export self
 
-    include NSingleExportable
+    include PSingleExportable
 
     def initialize(id, ntask, bjob, opts)
       super
