@@ -1,3 +1,7 @@
+Sat Sep 18 21:20:56 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* lib/fairy/node/*.rb: REQ251対応完了
+
 Sat Sep 18 19:43:20 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* n-output-varray.rb -> p-output-varray.rb
